2016-03-27  Simon Pfreundschuh  <simonpf@chalmers.se>

	* arts-2-3-463

	* src/matpackII.* (transpose_multiply):
	Added a function to multiply the transpose of a matrix with a vector
	without the need to explicitly compute the tranpose.

	* src/test_sparse.cc (test_sparse_multiplication) Added test for new
	multiplication function.

	* src/matpackI.h (Vector): Added transpose_multiply to friends
	declaration.

	* src/matpackI.cc (mult): Fixed input parameter to dgemv when multiplying
	a transposed matrix consisting only of one row/column.

	* src/test_matpack.cc (test_matrix_vector_multiplication) Refined test
	to catch above corner case.

2016-03-21 Jana Mendrok  <jana.mendrok@chalmers.se>

	* arts-2-3-463

	* src/m_refraction.cc, methods.cc (complex_refr_indexIceMatzler06):
	WSM to calculate Matzler06 ice ref index data (eq. to Warren08 microwave
	data).

	* src/refraction.[cc,h] (complex_n_ice_matzler06):
	The actual function to calculate Matzler ref indices.

	* controlfiles/artscomponents/refice/TestRefice.arts,
	TestRefice.complex_refr_indexREFERENCE.xml:
	For microwave use Matzler refindex data, not outdated Warren84. Set
	harder comparison threshold (old threshold was larger than imag refindex
	values as such; Warren84 passed as ok for Matzler reference data).

	* controlfiles/artscomponents/tmatrix/TestTMatrix.arts:
	Replaced refindex model Warren84 by Matzler06 (in comment). Harden
	comparison threshold to the order magnitude of the actual ssd data (we
	don't want to test the t- and f-grid settings, but the data itself).

	* controlfiles/artscomponents/tmatrix/TestTMatrix.aligned.ssdREFERENCE.xml,
	TestTMatrix.random.ssdREFERENCE.xml:
	Updated reference data according to changed refindex data.

2016-03-12  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-462

	* MC now works with scat data having a single temperature.

	* src/montecarlo.cc (opt_propExtract,pha_mat_singleExtract):